# user-agent-parser

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci-version.yml  ci.yml
examples/: basic.rs  rocket.rs
src/: errors.rs  lib.rs  request_guards.rs
src/models/: cpu.rs  device.rs  engine.rs  mod.rs  os.rs  product.rs  user_agent.rs
src/regexes/: cpu_regex.rs  device_regex.rs  engine_regex.rs  mod.rs  os_regex.rs  product_regex.rs
tests/: uap_core.rs
