[package]
name = "user-agent-parser"
version = "0.3.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/user-agent-parser"
homepage = "https://magiclen.org/user-agent-parser"
keywords = ["useragent", "user-agent", "uap", "rocket", "uap-core"]
categories = ["parser-implementations"]
description = "A parser to get the product, OS, device, cpu, and engine information from a user agent, inspired by https://github.com/faisalman/ua-parser-js and https://github.com/ua-parser/uap-core"
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "examples/rocket.rs"]

[dependencies]
yaml-rust = "0.4"
onig = "6"
rocket = { version = "0.5.0-rc.1", optional = true }

[[example]]
name = "rocket"
required-features = ["rocket"]