[package]
name = "user-agent-parser"
version = "0.3.6"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/magiclen/user-agent-parser"
homepage = "https://magiclen.org/user-agent-parser"
keywords = ["useragent", "user-agent", "uap", "rocket", "uap-core"]
categories = ["parser-implementations"]
description = "A parser to get the product, OS, device, cpu, and engine information from a user agent, inspired by https://github.com/faisalman/ua-parser-js and https://github.com/ua-parser/uap-core"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "examples/rocket.rs"]

[dependencies]
yaml-rust = "0.4"
onig = { version = "6", default-features = false }
rocket = { version = "0.5.0-rc.4", optional = true }

[[example]]
name = "rocket"
required-features = ["rocket"]
